# chacon

./: .gitignore  .travis.yml  LICENSE  README.md  clean_and_build_distribution.sh  environment.yml  setup.cfg
chacon/: __init__.py  classes.py  utils.py
examples/1-snakemake/: Snakefile  bad_contract.yml  create_summary.sh  verify_fail.sh  verify_succeed.sh
snakecheck/: __init__.py  __main__.py  classes.py  utils.py
tests/: summary.txt  test_integration.py
tests/1-snakemake/: Snakefile
