[metadata]
name = chacon
version = 0.1
author = Jason Fan
author_email = jasonfan@cs.umd.edu
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.5
setup_requires =
    pytest-runner
    setuptools >=38.3     # version with most `setup.cfg` bugfixes
install_requires =
    pandas
    click

tests_require =
    pytest

[options.entry_points]
console_scripts =
    chacon = chacon:cli

[aliases]
test=pytest

[tool:pytest]
testpaths = tests

