[metadata]
name = chacon
version = 0.0a0.dev0
author = Jason Fan
author_email = jasonfan@cs.umd.edu
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Intended Audience :: Science/Research

[options]
packages = find:
python_requires = >=3.5
setup_requires =
    pytest-runner
    setuptools >=38.3     # version with most `setup.cfg` bugfixes
install_requires =
    pandas
    click
    PyYAML

tests_require =
    pytest

[options.entry_points]
console_scripts =
    chacon = chacon:cli

[aliases]
test=pytest

[tool:pytest]
testpaths = tests

